--- a/main.html
+++ b/main.html
@@ -10,7 +10,12 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+       <center><h3>Do you want to proceed?</h3></center>
+	     <div>
+	   <button id="ok">OK</button>
+	
+	    <button id="cancel">Cancel</button>
+	 </div>
 </body>
 
 </html>
